--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -10,9 +10,9 @@ main:
   - name: Papers
     url: /#papers
     weight: 11
-  - name: Talks
-    url: /#talks
-    weight: 12
+  # - name: Talks
+  #   url: /#talks
+  #   weight: 12
   - name: Projects
     url: /#projects
     weight: 12
